# sinta

./: CMakeLists.txt  FindCEF3.cmake  FindCTPP2.cmake  TakeComponent.cmake  UTest.cmake  run.sh
cmake/: FindCEF3.cmake  FindCTPP2.cmake  FindWTCPP.cmake  TakeComponent.cmake  UTest.cmake
data/: index.html
data/scripts/: Bird.js  Boid.js  list.js  main.js  page.css  page.js  ui.js
ext/cef3/: build.sh
ext/ctpp/: CTPP2FileSourceLoader.cpp.diff
ext/ctpp2/: CMakeLists.txt  build.sh
ext/mpnok/: CMakeLists.txt  Log.cpp  Log.hpp  Nok.cpp  Nok.hpp  NumberGenerator.cpp  NumberGenerator.hpp  StdoutToStdin.cpp  StdoutToStdin.hpp  Task.cpp  Task.hpp  ThreadPool.hpp  Timer.hpp  main.cpp
src/: Bench.hpp  CMakeLists.txt  Chart.cpp  Chart.hpp  Config.hpp  Demangle.cpp  Demangle.hpp  Exception.cpp  Exception.hpp  ForEachTuple.hpp  Log.cpp  Log.hpp  Plugin.cpp  Plugin.hpp  Policies.hpp  Task.cpp  Task.hpp  ThreadPool.hpp  Timer.hpp  base.hpp  main.cpp
src/bc-robot/: CMakeLists.txt
src/http-server/: CMakeLists.txt  Connection.cpp  Connection.hpp  Header.hpp  HtmlMaker.cpp  HtmlMaker.hpp  MimeTypes.cpp  MimeTypes.hpp  Reply.cpp  Reply.hpp  Request.hpp  RequestHandler.cpp  RequestHandler.hpp  RequestParser.cpp  RequestParser.hpp  Server.cpp  Server.hpp  main.cpp  ut_ctpp_file_load.cpp  ut_ctpp_html.cpp
src/http-server/templating/: CMakeLists.txt  Compiler.cpp  Compiler.hpp  Generator.cpp  Generator.hpp  TextFileLoad.cpp  TextFileLoad.hpp  TextFileLoader.cpp  TextFileLoader.hpp  utility.cpp  utility.hpp
src/mpnok/: CMakeLists.txt  Log.hpp  Singleton.hpp  StdoutToStdin.cpp  Task.hpp  ThreadPool.cpp
src/tests/: CMakeLists.txt  UTest.cmake  hex_dump.c  ut_cpp11.cpp  ut_cpp_examples.cpp  ut_ctpp_gen_html.cpp  ut_patterns_multi.cpp  ut_sort_algorithms.cpp  ut_stllibrary.cpp  ut_welder.cpp  ut_word_iterator.cpp
src/utils/: Bench.hpp  CMakeLists.txt  Chart.cpp  Chart.hpp  Config.cpp  Demangle.cpp  Demangle.hpp  Error.hpp  ForEachTuple.hpp  Log.cpp  Log.hpp  Plugin.cpp  Plugin.hpp  Settings.cpp  SignalDispatcher.hpp  Singleton.hpp  Task.cpp  Task.hpp  ThreadPool.cpp  ThreadPool.hpp  Timer.hpp  base.hpp  daemon.py  main.cpp
src/web-client-app/: CMakeLists.txt  WebView.cpp  WebView.hpp  WebViewHandler.cpp  WebViewHandler.hpp  main.cpp
src/welder-model-web/: ArkLenghtPannel.cpp  ArkLenghtPannel.hpp  CMakeLists.txt  DynamikParamsPannel.cpp  DynamikParamsPannel.hpp  IndicatorPannel.cpp  IndicatorPannel.hpp  IndikatorPannel.cpp  IndikatorPannel.hpp  JobListPannel.cpp  JobListPannel.hpp  LcdIndicator.cpp  LcdIndicator.hpp  LedIndicator.cpp  LedIndicator.hpp  LightDiode.cpp  LightDiode.hpp  Main.cpp  PotentiometersPannel.cpp  PotentiometersPannel.hpp  WelderParamsPannel.cpp  WelderParamsPannel.hpp  WeldingPowerPannel.cpp  WeldingPowerPannel.hpp  WeldingTypesPannel.cpp  WeldingTypesPannel.hpp  WorkModePannel.cpp  WorkModePannel.hpp  main.css  rus_locale.xml
